@@ -1,3 +1,11 @@
+2008-08-19  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemGMPControls.cpp:
+	* browser-plugin/totemGMPPlayer.cpp:
+	* browser-plugin/totemGMPPlayer.h:
+	* browser-plugin/totemPlugin.cpp: Add support for Player.playState
+	and Controls.isAvailable in the GMP plugin (Helps: #547659)
+
 2008-08-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/plugins/pythonconsole/pythonconsole.py (show_console):
